--- a/geografia.html
+++ b/geografia.html
@@ -129,41 +129,41 @@
       <section id="carrusel-logos">
         <div class="slideshow-container">
           <div class="mySlides">
-              <div class="row justify-content-around align-items-center">
-                <div class="col-md-4 col-12">
-                  <div id="fundacionBBVA">
-                    <a href="https://www.fbbva.es" target="_blank"><img src="./img/logos/FundacionBBVA.svg" class="img-responsive img-fluid" alt="logo Fundación BBVA" title="Ir al sitio web de la Fundación BBVA"></a>
-                  </div>
-                </div>
-                <div class="col-md-4 col-12">
-                  <div class="wrap-img" id="MinCII">
-                    <a href="https://www.ciencia.gob.es/" target="_blank"><img src="./img/logos/MinCII.jpg" class="img-responsive img-fluid" alt="logo Ministerio de Ciencia e Innovación" title="Ir al sitio web del Ministerio de Ciencia e Innovación"></a>
-                  </div>
-                </div>
-                <div class="col-md-4 col-12">
-                  <div class="wrap-img" id="CSIC">
-                    <a href="http://www.csic.es" target="_blank"><img src="./img/logos/CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC" title="Ir al sitio web del CSIC"></a>
-                  </div>
+            <div class="row justify-content-around align-items-center">
+              <div class="col-md-4 col-12">
+                <div id="fundacionBBVA">
+                  <a href="https://www.fbbva.es" target="_blank"><img src="./img/logos/FundacionBBVA.svg" class="img-responsive img-fluid" alt="logo Fundación BBVA" title="Ir al sitio web de la Fundación BBVA"></a>
                 </div>
               </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="SEEC">
+                  <a href="http://www.estudiosclasicos.org/" target="_blank"><img src="./img/logos/SEEC.png" class="img-responsive img-fluid" alt="logo Sociedad Española de Estudios Clásicos" title="Ir al sitio web de la Sociedad Española de Estudios Clásicos"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CSIC">
+                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="mySlides">
-              <div class="row justify-content-around align-items-center">
-                <div class="col-md-4 col-12">
-                  <div class="wrap-img" id="CCHS">
-                    <a href="http://cchs.csic.es/" target="_blank"><img src="./img/logos/CCHS.png" class="img-responsive img-fluid" alt="logo CCHS" title="Ir al sitio web del CCHS"></a>
-                  </div>
-                </div>
-                <div class="col-md-4 col-12">
-                  <div class="wrap-img" id="CCHS-ILC">
-                    <a href="http://www.ilc.csic.es" target="_blank"><img src="./img/logos/CCHS_ILC.jpeg" class="img-responsive img-fluid" alt="logo ILC" title="Ir al sitio web del ILC"></a>
-                  </div>
-                </div>
-                <div class="col-md-4 col-12">
-                  <div class="wrap-img" id="PTIMedHis"><a href="https://pti-medhis.csic.es/" target="_blank"><img src="./img/logos/MedHis.jpg" class="img-responsive img-fluid" alt="logo PTI MedHis" title="Saber más de la PTI MedHis"></a>
-                  </div>
+            <div class="row justify-content-around align-items-center">
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CCHS">
+                  <a href="http://cchs.csic.es/" target="_blank"><img src="./img/logos/CCHS.png" class="img-responsive img-fluid" alt="logo CCHS" title="Ir al sitio web del CCHS"></a>
                 </div>
               </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CCHS-ILC">
+                  <a href="http://www.ilc.csic.es" target="_blank"><img src="./img/logos/CCHS_ILC.jpeg" class="img-responsive img-fluid" alt="logo ILC" title="Ir al sitio web del ILC"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="PTIMedHis"><a href="https://pti-medhis.csic.es/" target="_blank"><img src="./img/logos/MedHis.jpg" class="img-responsive img-fluid" alt="logo PTI MedHis" title="Saber más de la PTI MedHis"></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="slideshow-controls" style="text-align:center">
@@ -174,7 +174,7 @@
       <div class="row">
         <div class="col text-center">
           <p class="small">Para cuestiones técnicas relacionadas con este sitio web, por favor diríjase a elvuelodehermes&thinsp;@&thinsp;gmail.com<br/>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2021
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2022
           </p>
         </div>
       </div>
