--- a/manuscritos.html
+++ b/manuscritos.html
@@ -239,7 +239,7 @@
       </div>
     </main>
     <footer class="container">
-      <section id="carrusel-logos">
+<section id="carrusel-logos">
         <div class="slideshow-container">
           <div class="mySlides">
             <div class="row justify-content-around align-items-center">
@@ -249,13 +249,13 @@
                 </div>
               </div>
               <div class="col-md-4 col-12">
-                <div class="wrap-img" id="MinCII">
-                  <a href="https://www.ciencia.gob.es/" target="_blank"><img src="./img/logos/MinCII.jpg" class="img-responsive img-fluid" alt="logo Ministerio de Ciencia e Innovación" title="Ir al sitio web del Ministerio de Ciencia e Innovación"></a>
+                <div class="wrap-img" id="SEEC">
+                  <a href="http://www.estudiosclasicos.org/" target="_blank"><img src="./img/logos/SEEC.png" class="img-responsive img-fluid" alt="logo Sociedad Española de Estudios Clásicos" title="Ir al sitio web de la Sociedad Española de Estudios Clásicos"></a>
                 </div>
               </div>
               <div class="col-md-4 col-12">
                 <div class="wrap-img" id="CSIC">
-                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC" title="Ir al sitio web del CSIC"></a>
+                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
                 </div>
               </div>
             </div>
@@ -280,14 +280,14 @@
           </div>
         </div>
         <div class="slideshow-controls" style="text-align:center">
-          <a class="prev" onclick="plusSlides(-1)" title="Ver más"><span class="far fa-arrow-alt-circle-left"></span></a>
-          <a class="next" onclick="plusSlides(1)" title="Ver más"><span class="far fa-arrow-alt-circle-right"></span></a>
+          <a class="prev" onclick="plusSlides(-1)" title="Ver más"><span aria="true" class="far fa-arrow-alt-circle-left"></span></a>
+          <a class="next" onclick="plusSlides(1)" title="Ver más"><span aria="true" class="far fa-arrow-alt-circle-right"></span></a>
         </div>
       </section>
       <div class="row">
         <div class="col text-center">
           <p class="small">Para cuestiones técnicas relacionadas con este sitio web, por favor diríjase a elvuelodehermes&thinsp;@&thinsp;gmail.com<br>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2021
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2022
           </p>
         </div>
       </div>
