--- a/periegesis.html
+++ b/periegesis.html
@@ -4075,7 +4075,7 @@
       <p class="small" id="n1"><a href="#nota1" title="Volver al texto">1</a> El texto que se presenta aquí es el establecido por Adriano Muñoz Pascual. Véase Muñoz Pascual, A. «Estudios sobre la Descripción de la tierra habitada de Dionisio el Periegeta». Tesis doctoral, Universidad de Murcia, 2013. <a href="http://hdl.handle.net/10201/29902" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank">http://hdl.handle.net/10201/29902</a>.</p>
     </main>
     <footer class="container">
-      <section id="carrusel-logos">
+    <section id="carrusel-logos">
         <div class="slideshow-container">
           <div class="mySlides">
             <div class="row justify-content-around align-items-center">
@@ -4085,13 +4085,13 @@
                 </div>
               </div>
               <div class="col-md-4 col-12">
-                <div class="wrap-img" id="MinCII">
-                  <a href="https://www.ciencia.gob.es/" target="_blank"><img src="./img/logos/MinCII.jpg" class="img-responsive img-fluid" alt="logo Ministerio de Ciencia e Innovación" title="Ir al sitio web del Ministerio de Ciencia e Innovación"></a>
+                <div class="wrap-img" id="SEEC">
+                  <a href="http://www.estudiosclasicos.org/" target="_blank"><img src="./img/logos/SEEC.png" class="img-responsive img-fluid" alt="logo Sociedad Española de Estudios Clásicos" title="Ir al sitio web de la Sociedad Española de Estudios Clásicos"></a>
                 </div>
               </div>
               <div class="col-md-4 col-12">
                 <div class="wrap-img" id="CSIC">
-                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC" title="Ir al sitio web del CSIC"></a>
+                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
                 </div>
               </div>
             </div>
@@ -4123,7 +4123,7 @@
       <div class="row">
         <div class="col text-center">
           <p class="small">Para cuestiones técnicas relacionadas con este sitio web, por favor diríjase a elvuelodehermes&thinsp;@&thinsp;gmail.com<br>
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2021
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2022
           </p>
         </div>
       </div>
