--- a/manuscritos.html
+++ b/manuscritos.html
@@ -117,13 +117,15 @@
                   <p class="resto"><span lang="el">Μιχαήλος Ἀποστόλης Βυζάντιος, τὸν ἀναγινώσκοντα μεμνῆσθαι παρακαλεῖ</span>. La de Dionisio Periegeta, en <abbr title="folio">f.</abbr> 206<sup>v</sup>: <span lang="el">ΔΙΟΝΥΣΙΟΥ ΑΛΕΞΑΝΔΡΕΩΣ ΟΙΚΟΥΜΕΝΗΣ ΠΕΡΙΗΓΗΣΗΣ. Μιχαήλος Ἀποστόλης Βυζάντιος, δορυάλωτος ἔγραψα.</span></p>
                   <p class="resto">Un segundo copista ha sustituido a Apostolis en folio 175<sup>v</sup>. 5 ai-176.9. La mano que completa la carta-prólogo al <em>Comentario</em> de Eustacio en <abbr title="folios">ff.</abbr> 113-114 (margen superior) es de finales del siglo <span class="versalitas">xvi</span>.</p>
                   <h4>Análisis codicológico</h4>
-                  <p>Papel occidental, plegado <em>in folio</em>, con filigrana «<span lang="fr">Monts</span>», no identificada.</p>
+                  <p>Papel occidental, plegado <em>in folio</em>, con filigrana «<span lang="fr">Monts</span>» (<abbr title="variante">var.</abbr> <abbr title="similar a">sim.</abbr> <abbr title="Briquet (catálogo de filigranas">Br.</abbr> 11164, <abbr title="hacia">a.</abbr> 1476) y «<span lang="fr">Flèche</span>» (<abbr title="Briquet (catálogo de filigranas)">6275</abbr>, <abbr title="hacia">a.</abbr> 1483).<sup><a href="#n1" title="Créditos identificación id="nota1">1</a></sup></p>
                   <p class="resto">Distribución de los cuadernos: 25 x iv (200) + 7 <abbr title="folios">ff.</abbr> (207); numeración, <span lang="la"><abbr title="incipit"><em>inc.</em></abbr></span> <span lang="el">α’</span> <span lang="la"><abbr title="desint"><em>des.</em></abbr></span> <span lang="el">κε’</span>, en el margen inferior externo de la primera página.</p>
                   <p class="resto">El texto del comentario se distribuye en 40 líneas por página (210 x 135 mm, el cuadro de escritura, mientras que el poema sólo ocupa 20 líneas por página (210 x 90/5 mm).</p>
                   <p class="resto">Encuadernación cretense, con hierros decorativos típicos del taller de Apostolis en Creta, como la flor de lis en círculo y el águila bicéfala en rombo.</p>
                   <h4>Referencias bibliográficas</h4>
-                  <p>Hunger, H., ed., <span lang="de"><em>Repertorium der griechischen Kopisten</em>. Wien: Verlag der Österreichischen Akademie der Wissenschaften</span>, 1981-1994. </p>
+              <p>Hunger, H., <abbr title="editor">ed.</abbr>, <span lang="de"><em>Repertorium der griechischen Kopisten</em>. Wien: Verlag der Österreichischen Akademie der Wissenschaften</span>, 1981-1994. </p>
                   <h6 class="revisor"><abbr title="Paula Caballero Sánchez">PCS</abbr>-<abbr title="Inmaculada Pérez Martín">IPM</abbr></h6>
+                    <hr>
+      <p class="small" id="n1"><a href="#nota1" title="Volver al texto">1</a> Filigranas identificadas por Paula Caballero Sánchez (septiembre de 2021).</p>
                 </div>
                 <div id="diktyon52358" class="collapse" data-parent="#accordion" itemscope itemtype="https://schema.org/Manuscript">
                   <h3 itemprop="name">Paris, Bibliothèque nationale de France, grec 2723</h3>
