--- a/eustaciogr.html
+++ b/eustaciogr.html
@@ -58,8 +58,12 @@
               <a class="dropdown-item" href="./manuscritos.html" title="Conocer la transmisión textual">manuscritos</a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Ver la Periégesis de Dionisio en un mapa interactivo" target="_blank">Mapa</a>
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Mapas interactivos</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
+              <a class="dropdown-item" href="https://recogito.pelagios.org/document/nok4yr1hvqiiwa/map" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank">Comentario de Eustacio</a>
+            </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión">La Geografía antigua</a>
