--- a/mapas.html
+++ b/mapas.html
@@ -1,1 +1,163 @@
+<!DOCTYPE html>
+<html lang="es">
 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Inmaculada Pérez-Martín">
+    <meta name="author" content="Juan Signes-Codoñer">
+    <meta name="author" content="Jesús Polo-Arrondo">
+    <meta name="author" content="Paula Caballero-Sánchez">
+    <meta name="author" content="Carmen García-Bueno">
+    <meta name="keywords" content="Eustacio de Tesalónica, Dionisio de Alejandría, Periégesis, geografía antigua">
+    <meta name="description" content="Página del proyecto de investigación 'El mundo según Homero: de Dionisio Periegeta a Eustacio de Tesalónica', Madrid, España">
+     <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=greek,greek-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/ac39874428.js" crossorigin="anonymous"></script>
+    <script src="js/modo_oscuro.js"></script>
+    <title>Proyecto</title>
+  </head>
+
+  <body>
+    <!-- Barra de navegación en la cabecera -->
+    <nav class="navbar navbar-expand-sm bg-light navbar-light sticky-top">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#barraNavegacionColapsada"><span class="navbar-text">Menú</span><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="barraNavegacionColapsada">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html" title="Página de inicio">Inicio</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Proyecto</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./proyecto.html" title="Conocer el proyecto">Sobre el proyecto</a>
+              <a class="dropdown-item" href="./proyecto.html#miembros" title="Conocer a los integrantes del proyecto">Miembros</a>
+              <a class="dropdown-item" href="./proyecto.html#cronograma" title="Vida del proyecto">Historia</a>
+              <a class="dropdown-item" href="./proyecto.html#recursos" title="Enlaces a otros materiales generados en el proyecto">Recursos</a>
+            </div>
+          </li>
+          <!--Esto es otro menú desplegable. Hay que cambiar el valor de href="" por la url de la página. Si no hay ninguna, el valor es # -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Dionisio Periegeta</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./dionisioperiegeta.html" title="Conocer al autor">El autor y la obra</a>
+              <a class="dropdown-item disabled" href="#" title="Explorar la traducción">texto en castellano</a>
+              <a class="dropdown-item" href="./periegesis.html" title="Explorar el texto original">texto en griego</a>
+              <a class="dropdown-item" href="./manuscritos.html" title="Conocer la transmisión textual">manuscritos</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Eustacio de Tesalónica</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="./eustaciodetesalonica.html" title="Conocer al autor">El autor y la obra</a>
+              <a class="dropdown-item" href="./comentario.html" title="Explorar la traducción">texto en castellano</a>
+              <a class="dropdown-item" href="./eustaciogr.html" title="Explorar el texto original">texto en griego</a>
+              <a class="dropdown-item" href="./manuscritos.html" title="Conocer la transmisión textual">manuscritos</a>
+            </div>
+          </li>
+           <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Mapas interactivos</a>
+            <div class="dropdown-menu">
+            <a class="dropdown-item" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
+              <a class="dropdown-item" href="https://recogito.pelagios.org/document/nok4yr1hvqiiwa/map" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank">Comentario de Eustacio</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./geografia.html" title="Aprender sobre la geografía antigua y su transmisión">La Geografía antigua</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./creditos.html" title="Créditos, agradecimientos, licencia, y otros detalles técnicos">Créditos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="mailto:elvuelodehermes@gmail.com?subject:Contacto desde la web" title="Contactar con el proyecto">Contacto</a>
+          </li>
+        </ul>
+      </div>
+      <button class="btn" onclick="modo_oscuro()" title="Invertir colores"><i class="fas fa-palette"></i></button>
+    </nav>
+    <!--Esta es la cabecera. Se puede sustituir por una imagen -->
+    <header>
+      <div class="flex-container">
+        <div class="jumbotron" id="cabecera">
+          <h1>El vuelo de Hermes</h1>
+          <h2>Proyecto de investigación</h2>
+        </div>
+      </div>
+    </header>
+    <main class="container">
+      <!--Esto es un comentario -->
+      <div class="container">
+        <h2>Los mapas</h2>
+        <section id="">
+          <h3>Mapas</h3>
+          <p>Lorem ipsum.</p>
+          <p class="resto">sit amet.</p>
+        </section>       
+      </div>
+    </main>
+    <footer class="container">
+      <section id="carrusel-logos">
+        <div class="slideshow-container">
+          <div class="mySlides">
+            <div class="row justify-content-around align-items-center">
+              <div class="col-md-4 col-12">
+                <div id="fundacionBBVA">
+                  <a href="https://www.fbbva.es" target="_blank"><img src="./img/logos/FundacionBBVA.svg" class="img-responsive img-fluid" alt="logo Fundación BBVA" title="Ir al sitio web de la Fundación BBVA"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="SEEC">
+                  <a href="http://www.estudiosclasicos.org/" target="_blank"><img src="./img/logos/SEEC.png" class="img-responsive img-fluid" alt="logo Sociedad Española de Estudios Clásicos" title="Ir al sitio web de la Sociedad Española de Estudios Clásicos"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CSIC">
+                  <a href="http://www.csic.es" target="_blank"><img src="./img/logos/MCINN_CSIC.jpg" class="img-responsive img-fluid" alt="logo CSIC y MCINN" title="Ir al sitio web del CSIC"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="mySlides">
+            <div class="row justify-content-around align-items-center">
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CCHS">
+                  <a href="http://cchs.csic.es/" target="_blank"><img src="./img/logos/CCHS.png" class="img-responsive img-fluid" alt="logo CCHS" title="Ir al sitio web del CCHS"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="CCHS-ILC">
+                  <a href="http://www.ilc.csic.es" target="_blank"><img src="./img/logos/CCHS_ILC.jpeg" class="img-responsive img-fluid" alt="logo ILC" title="Ir al sitio web del ILC"></a>
+                </div>
+              </div>
+              <div class="col-md-4 col-12">
+                <div class="wrap-img" id="PTIMedHis"><a href="https://pti-medhis.csic.es/" target="_blank"><img src="./img/logos/MedHis.jpg" class="img-responsive img-fluid" alt="logo PTI MedHis" title="Saber más de la PTI MedHis"></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slideshow-controls" style="text-align:center">
+          <a class="prev" onclick="plusSlides(-1)" title="Ver más"><span aria="true" class="far fa-arrow-alt-circle-left"></span></a>
+          <a class="next" onclick="plusSlides(1)" title="Ver más"><span aria="true" class="far fa-arrow-alt-circle-right"></span></a>
+        </div>
+      </section>
+      <div class="row">
+        <div class="col text-center">
+          <p class="small">Para cuestiones técnicas relacionadas con este sitio web, por favor diríjase a elvuelodehermes&thinsp;@&thinsp;gmail.com<br>
+            <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Licencia de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" class="img-center" /></a> 2022
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="jquery/jquery-3.4.1.slim.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/slideShow.js"></script>
+  </body>
+
+</html>
