--- a/creditos.html
+++ b/creditos.html
@@ -91,7 +91,7 @@
     <main class="container">
       <section id="agradecimientos">
         <h2>Agradecimientos</h2>
-        <p>El proyecto agradece a <strong>Adriano Muñoz Pascual</strong> su predisposición para la reutilización en este proyecto de los resultados obtenidos en su tesis de doctorado sobre Dionisio de Alejandría y su <em>Periégesis</em> (<a href="https://www.zotero.org/elvuelodehermes/items/DDXSSHEB/library" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank" itemprop="url">Referencia bibliográfica</a>).</p>
+        <p>El proyecto agradece a <strong>Adriano Muñoz Pascual</strong> su predisposición para la reutilización en este proyecto de los resultados obtenidos en su tesis de doctorado sobre Dionisio de Alejandría y su <em>Periégesis</em> (<a href="https://digitum.um.es/digitum/handle/10201/29902" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador" target="_blank" itemprop="url">Repositorio digital de la <abbr title="Universidad de Murcia">UM</abbr></a>).</p>
       </section>
       <section id="licencia">
         <h2>Licencias de uso y citas</h2>
