--- a/mapas.html
+++ b/mapas.html
@@ -96,7 +96,7 @@
         </section>
         <section id="etiquetas">
           <h3>Etiquetas</h3>
-          <h4>Mapa de la <em>Periégesis</em> de Dionisio.</h4>
+          <h4>Mapa de la <em>Periégesis</em> de Dionisio</h4>
           <p>En este mapa se utilizan las siguientes etiquetas:</p>
           <ul>
             <li>Cabo</li>
@@ -111,7 +111,7 @@
             <li>Río</li>
             <li>Templo</li>        
           </ul>
-          <h4>Mapa del comentario de Eustacio.</h4>
+          <h4>Mapa del comentario de Eustacio</h4>
           <p>En este mapa se utilizan las siguientes etiquetas:</p>
           <ul>
             <li>Accidente costero (engloba cabo, golfo, estrecho, puerto)</li>
