Modificación menú «Mapas»
Adición del enlace a la página «Mapas».

--- a/mapas.html
+++ b/mapas.html
@@ -63,6 +63,7 @@
             <div class="dropdown-menu">
             <a class="dropdown-item" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
               <a class="dropdown-item" href="https://recogito.pelagios.org/document/nok4yr1hvqiiwa/map" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank">Comentario de Eustacio</a>
+              <a class="dropdown-item" href="./mapas.html" title="Aprenda más sobre los mapas antiguos y digitales">Mapas</a>
             </div>
           </li>
           <li class="nav-item">
@@ -119,7 +120,7 @@
             <li>Accidente fluvial (engloba ríos, fuentes, manantiales, afluentes, cascadas, deltas o desembocaduras)</li>
             <li>Archipiélago</li>
             <li>Ciudad (cualquier núcleo poblacional mencionado)</li>
-            <li><li>Accidente del relieve (incluye montaña, llanura, península, cordillera, valle...)</li>Isla</li>
+            <li>Isla</li>
           <li>Lago</li>
           <li>Mar</li>
           <li>Océano</li>
@@ -127,10 +128,10 @@
           <li>Pueblo (engloba los <em>etnónimos</em>, que son aquellos nombres para los grupos de una misma región o etnia, y los <em>gentilicios</em>, que designan a los habitantes de un núcleo poblacional en concreto. En ocasiones pueden coincidir)</li>
             <li>Región (región, país o continente)</li>
           </ul>
-          <p class="resto">El sistema además genera las dos siguientes etiquetas:</p>
+          <p class="resto">La aplicación además genera las dos siguientes etiquetas:</p>
           <ul>
-            <li><span lang="en"><em>Multiple values</em></span>: la aplicación genera esta etiqueta cuando en una misma georreferencia se han etiquetado dos o más entidades. A mayor tamaño del punto, más entidads incluye.</li>
-            <li><span lang="en"><em>No value</em></span>: la aplicación genera esta etiqueta para las entidades georreferenciadas, pero a las que no se ha dado una etiqueta en el campo correspondiente.</li>
+            <li><span lang="en"><em>Multiple values</em></span>: indica que en una misma georreferencia se han etiquetado dos o más entidades. A mayor tamaño del punto, más entidades incluye.</li>
+            <li><span lang="en"><em>No value</em></span>: indica entidades georreferenciadas a las que no se ha dado una etiqueta en el campo correspondiente.</li>
           </ul>
         <p class="resto">El color de la etiqueta es aleatorio, lo establece la aplicación y el usuario no lo puede cambiar. La presentación de la lista se ordena por peso, es decir, aparece en la parte superior la etiqueta que se ha utilizado en más entidades.</p>
         </section>       
