--- a/periegesis.html
+++ b/periegesis.html
@@ -64,6 +64,7 @@
             <div class="dropdown-menu">
             <a class="dropdown-item" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
               <a class="dropdown-item" href="https://recogito.pelagios.org/document/nok4yr1hvqiiwa/map" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank">Comentario de Eustacio</a>
+              <a class="dropdown-item" href="./mapas.html" title="Aprenda más sobre los mapas antiguos y digitales">Mapas</a>
             </div>
           </li>
           <li class="nav-item">
