--- a/mapas.html
+++ b/mapas.html
@@ -83,14 +83,15 @@
     <header>
       <div class="flex-container">
         <div class="jumbotron" id="cabecera">
-          <h1>Mapas</h1>
+          <h1>El vuelo de Hermes</h1>
+          <h2>Proyecto de investigación</h2>
         </div>
       </div>
     </header>
     <main class="container">
       <!--Esto es un comentario -->
       <div class="container">
-        <h2>Los mapas</h2>
+        <h2>Del mundo imaginado a la imagen del mundo</h2>
         <section id="intro_mapas">
           <h3>Introducción</h3>
           <p>Los mapas interactivos que presentamos se han elaborado con dos herramientas. Para el texto de Dionisio, la <a href="http://unidadsig.cchs.csic.es/sig/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Unidad <abbr title="(de) Sistemas de Información Geográfica y Humanidades Digitales">SIGyHD</abbr></a> del <abbr title="Centro de Ciencias Humanas y Sociales, Consejo Superior de Investigaciones Científicas">CCHS-CSIC</abbr> ha utilizado <a href="https://www.arcgis.com/index.html" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">ArcGIS</a>. Con el de Eustacio, los miembros del proyecto han estado trabajando en <a href="https://recogito.pelagios.org/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Recogito</a>.</p>
