--- a/mapas.html
+++ b/mapas.html
@@ -135,7 +135,26 @@
             <li><span lang="en"><em>No value</em></span>: indica entidades georreferenciadas a las que no se ha dado una etiqueta en el campo correspondiente.</li>
           </ul>
         <p class="resto">El color de la etiqueta es aleatorio, lo establece la aplicación y el usuario no lo puede cambiar. La presentación de la lista se ordena por peso, es decir, aparece en la parte superior la etiqueta que se ha utilizado en más entidades.</p>
-        </section>       
+        </section> 
+        <section id="vocabulario">
+          <h3>Vocabulario</h3>
+          <p>Aunque la obra de Dionisio se presenta en verso, enlazando con la tradición épica homérica, no deja de tener un matiz de texto técnico. Esto da pie a la aparición continua de una serie de palabras relacionadas con el ámbito de la geografía, que el autor puede adaptar según exigencias del mettro para que suene mejor o por <span lang="la"><em>variatio</em></span>.</p>
+          <dl>
+            <dt>Mares, océanos y lagos</dt>
+            <dd>
+              <span lang="el"><em>ἅλμη</em></span>, 
+              <span lang="el"><em>πόντος</em></span>, 
+              <span lang="el"><em>λίμνη</em></span>, 
+              <span lang="el"><em>ὠκεανός</em></span>, 
+              <span lang="el"><em>θάλασσα</em></span>, 
+              <span lang="el"><em>πέλαγος</em></span>, 
+              <span lang="el"><em>πόρος</em></span>, 
+              <span lang="el"><em>ῥόος</em></span>, 
+              <span lang="el"><em>οἶδμα</em></span>, 
+              <span lang="el"><em>ἅλς</em></span>
+            <dd>
+          </dl>
+        </section>
       </div>
     </main>
     <footer class="container">
