--- a/mapas.html
+++ b/mapas.html
@@ -138,7 +138,7 @@
         </section> 
         <section id="vocabulario">
           <h3>Vocabulario</h3>
-          <p>Aunque la obra de Dionisio se presenta en verso, enlazando con la tradición épica homérica, no deja de tener un matiz de texto técnico. Esto da pie a la aparición continua de una serie de palabras relacionadas con el ámbito de la geografía, que el autor puede adaptar según exigencias del mettro para que suene mejor o por <span lang="la"><em>variatio</em></span>.</p>
+          <p>Aunque la obra de Dionisio se presenta en verso, enlazando con la tradición épica homérica, no deja de tener un matiz de texto técnico. Esto da pie a la aparición continua de una serie de palabras relacionadas con el ámbito de la geografía, que el autor puede adaptar según exigencias del metro o por <span lang="la"><em>variatio</em></span>.</p>
           <dl>
             <dt>Mares, océanos y lagos</dt>
             <dd>
