--- a/mapas.html
+++ b/mapas.html
@@ -61,7 +61,7 @@
            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">Mapas interactivos</a>
             <div class="dropdown-menu">
-            <a class="dropdown-item" href="http://usig-proyectos.cchs.csic.es/homero/#" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
+            <a class="dropdown-item" href="http://sigyhd.cchs.csic.es/el-mundo-segun-homero/" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank"><em>Periégesis</em> de Dionisio</a>
               <a class="dropdown-item" href="https://recogito.pelagios.org/document/nok4yr1hvqiiwa/map" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador con el mapa" target="_blank">Comentario de Eustacio</a>
               <a class="dropdown-item" href="./mapas.html" title="Aprenda más sobre los mapas antiguos y digitales">Mapas</a>
             </div>
@@ -94,7 +94,7 @@
         <h2>Del mundo imaginado a la imagen del mundo</h2>
         <section id="intro_mapas">
           <h3>Introducción</h3>
-          <p>Los mapas interactivos que presentamos se han elaborado con dos herramientas. Para el texto de Dionisio, la <a href="http://unidadsig.cchs.csic.es/sig/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Unidad <abbr title="(de) Sistemas de Información Geográfica y Humanidades Digitales">SIGyHD</abbr></a> del <abbr title="Centro de Ciencias Humanas y Sociales, Consejo Superior de Investigaciones Científicas">CCHS-CSIC</abbr> ha utilizado <a href="https://www.arcgis.com/index.html" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">ArcGIS</a>. Con el de Eustacio, los miembros del proyecto han estado trabajando en <a href="https://recogito.pelagios.org/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Recogito</a>.</p>
+          <p>Los mapas interactivos que presentamos se han elaborado con dos herramientas. Para el texto de Dionisio, la <a href="http://unidadsig.cchs.csic.es/sig/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Unidad <abbr title="(de) Sistemas de Información Geográfica y Humanidades Digitales">SIGyHD</abbr></a> del <abbr title="Centro de Ciencias Humanas y Sociales, Consejo Superior de Investigaciones Científicas">CCHS-CSIC</abbr> ha utilizado la librería de código abierto<a href="https://openlayers.org/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Openlayers</a>. Con el de Eustacio, los miembros del proyecto han estado trabajando en <a href="https://recogito.pelagios.org/" target="_blank" title="Al hacer clic en el enlace se abrirá una nueva pestaña en el navegador">Recogito</a>.</p>
         </section>
         <section id="etiquetas">
           <h3>Etiquetas</h3>
