--- a/proyecto.html
+++ b/proyecto.html
@@ -206,6 +206,7 @@
                 <h4>2022</h4>
                 <p>Comunicación de Paula Caballero Sánchez en las <em><span class="versalitas">xix</span> Jornadas de Bizancio</em> (Madrid, 25 de enero de 2022).</p>
                 <p>Comunicación de Inmaculada Pérez Martín en las <em><span class="versalitas">xix</span> Jornadas de Bizancio</em> (Madrid, 26 de enero de 2022).</p>
+                <p>Comunicación de Paula Caballero Sánchez y Carmen García Bueno en el <em>24th International Congress of Byzantine Studies</em> (Venecia, 23 de agosto de 2022).</p>
               </div>
             </div>
           </div>
