--- a/proyecto.html
+++ b/proyecto.html
@@ -207,8 +207,14 @@
                 <p>Comunicación de Paula Caballero Sánchez en las <em><span class="versalitas">xix</span> Jornadas de Bizancio</em> (Madrid, 25 de enero de 2022).</p>
                 <p>Comunicación de Inmaculada Pérez Martín en las <em><span class="versalitas">xix</span> Jornadas de Bizancio</em> (Madrid, 26 de enero de 2022).</p>
                 <p>Comunicación de Paula Caballero Sánchez en el <span lang="en">workshop</span> <em><span lang="en">Rethinking textual circulation oand publication practices in 12th-century Constantinople</span></em> (Atenas, 13 de mayo de 2022) </p>
-                <p>Comunicación de Paula Caballero Sánchez y Carmen García Bueno en el <em>24th International Congress of Byzantine Studies</em> (Venecia, 23 de agosto de 2022).</p>
+                <p>Comunicación de Paula Caballero Sánchez y Carmen García Bueno en el <span lang="en"><em>24th International Congress of Byzantine Studies</em></span> (Venecia, 23 de agosto de 2022).</p>
               </div>
+               <div class="timeline-container timeline-right">
+              <div class="timeline-content">
+                <h4>2023</h4>
+                <p>Presentación del proyecto en el evento <em>Grandes infraestructuras europeas de <abbr title="Ciencias Sociales">CC. SS.</abbr> y <abbr title="Humanidades Digitales">HH. DD./abbr> en el <abbr title="Consejo Superior de Investigaciones Científicas">CSIC</abbr>: <a href="https://www.dariah.eu/" title="DARIAH = Digital Research Infrastructure for the Arts and Humanities" target="_blank" itemprop="url">DARIAH</a> y <a href="https://www.clarin.eu/" title="CLARIN = Common Language Resources and Technology Infrastructure" target="_blank" itemprop="url">CLARIN</a> en el horizonte</em> (<abbr title="Centro de Ciencias Humanas y Sociales">CCHS</abbr>, Madrid, 11 de mayo de 2023)</p>
+              </div>
+            </div>
             </div>
           </div>
         </section>
